Overflow issue

--- a/themesrc/assets/scss/sections/block-usps-slider.scss
+++ b/themesrc/assets/scss/sections/block-usps-slider.scss
@@ -96,7 +96,7 @@
         top: 0;
         left: 50vw;
         z-index: 1;
-        overflow-x: hidden;
+        overflow: hidden;
         img{
           position: absolute;
           min-width: 100%;
